--- a/ibmi/pubspec.yaml
+++ b/ibmi/pubspec.yaml
@@ -32,13 +32,17 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.15
+  mocktail: ^0.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^4.0.6
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
 
